--- a/css/style-new.css
+++ b/css/style-new.css
@@ -13,7 +13,7 @@ header{background:#f2faff}
 .carousel-indicators li{background-color:#2876a9;opacity:1}
 .carousel-indicators .active{background-color:#e41225;opacity:1}
 .head-main-tel{color:#fff;font-weight:700;text-decoration:none}
-.head-main-tel:hover{color:#dfce9d;text-decoration:none}
+.head-main-tel:hover{color:#e7effa;text-decoration:none}
 .headerno-cls{font-size:30px}
 .main-all-heading{font-size:32px;font-weight:500;color:#212121;line-height:38px}
 .main-all-heading u{text-decoration-color:#e3000f;text-underline-offset:6px}
@@ -30,7 +30,7 @@ header{background:#f2faff}
 .banner-list{padding-right:0;font-size:21px;color:#30292b;padding-inline-start:25px}
 hr.bannerhr{width:100px;border:3px solid #0074ad}
 .banner-main-icon-heading{padding-top:10px;padding-left:15px;font-size:24px;line-height:30px;color:#212121;font-weight:500}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-35px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-35px}
 #carouselExampleIndicators .carousel-control-next,.carousel-control-prev{display:none!important}
 #carouselExampleIndicators .carousel-indicators{z-index:5}
 @media (max-width:1700px){
@@ -42,11 +42,11 @@ hr.bannerhr{width:100px;border:3px solid #0074ad}
 .banner-sub-heding-n{font-size:30px;font-weight:400}
 .banner-list{padding-right:0;font-size:18px;color:#30292b;padding-inline-start:25px}
 .banner-content-cls{height:450px;max-height:450px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-25px;font-size:16px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-25px;font-size:16px}
 }
 @media (max-width:1500px){
 .banner-content-cls{height:450px;max-height:450px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-25px;font-size:15px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-25px;font-size:15px}
 }
 @media (max-width:1450px){
 .banner-content-cls{height:450px;max-height:450px}
@@ -54,7 +54,7 @@ hr.bannerhr{width:100px;border:3px solid #0074ad}
 @media (max-width:1400px){
 .main-banner-heading-n{font-size:35px;text-transform:uppercase;font-weight:500;color:#0074ad}
 .banner-content-cls{height:440px;max-height:440px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-25px;font-size:14px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-25px;font-size:14px}
 }
 @media (max-width:1300px){
 .banner-content-cls{height:465px;max-height:465px}
@@ -67,7 +67,7 @@ hr.bannerhr{width:100px;border:3px solid #0074ad}
 .mob-cls-ban-icon{width:55px;height:55px}
 .banner-main-icon-heading{padding-top:12px;padding-left:12px;font-size:16px;line-height:25px;color:#212121;font-weight:500}
 .banner-content-cls{height:390px;max-height:400px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-25px;font-size:12px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-25px;font-size:12px}
 }
 @media (max-width:1100px){
 .banner-content-cls{height:435px;max-height:435px}
@@ -76,11 +76,11 @@ hr.bannerhr{width:100px;border:3px solid #0074ad}
 .main-banner-heading-n{font-size:24px;text-transform:uppercase;font-weight:500;color:#0074ad}
 .banner-sub-heding-n{font-size:20px;font-weight:400}
 .banner-content-cls{height:380px;max-height:450px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-20px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-20px}
 }
 @media (max-width:992px){
 .banner-content-cls{height:430px;max-height:450px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-15px;font-size:12px}
+.blue-strip-offer-section{text-align:right;color:#212121;margin-top:-12px;font-size:12px}
 }
 @media (max-width:820px){
 .banner-up-para{font-size:20px;margin-bottom:0;font-weight:500}
@@ -103,7 +103,17 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .banner-list{padding-right:0;font-size:18px;color:#30292b;padding-inline-start:25px}
 .banner-content-cls{height:420px;max-height:420px}
 .mob-cls-ban-icon{width:70px;height:70px}
-.blue-strip-offer-section{text-align:right;color:#fff;margin-top:-12px;font-size:14px}
+.blue-strip-offer-section {
+        text-align: right;
+        color: #212121;
+        padding-bottom: 20px;
+        margin-top: -155px;
+        font-size: 14px;
+        font-weight: 600;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        transform: scale(1);
+    }
 }
 @media (max-width:430px){
 .banner-content-cls{height:395px;max-height:400px}
@@ -230,6 +240,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .panel-title a:after{content:"-";float:right;font-size:30px;font-weight:400;position:absolute;right:25px;margin:-15px}
 .panel-title a.collapsed:after{content:"+"}
 .para-faq{padding:20px 40px 0 60px;font-size:16px;color:#636363}
+.panel-title .btn-link:focus{box-shadow:none}
 @media screen and (max-width:600px){
 .panel-title a{text-decoration:none;color:#30292b;font-size:18px;font-weight:500}
 .panel-title a span{padding:8px;font-size:16px;line-height:40px}
@@ -304,12 +315,14 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .open-btn-cls-new:hover{font-weight:600;text-decoration:none;color:#fff}
 .chat-popup{width:92%;display:none;position:fixed;bottom:0;left:15px;right:15px;z-index:9}
 }
+
+
 .xogen-para{padding-top:15px;font-size:16px;color:#212121}
 .xogen-list-para{list-style:none;display:flex;padding-inline-start:0px}
 .xogen-list-para li{padding-right:20px;color:#212121}
 .Xogen_heding_banner{color:#1c82c4;font-family:"Playfair Display",serif;font-weight:900;font-size:55px}
 .Xogen_Sub_heding_banner{font-size:29px;font-weight:400;margin-bottom:0}
-.Xogen_black_heding{margin-top:30px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase;display:inline-flex}
+.Xogen_black_heding{display:none;margin-top:30px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
 .xogen_banner_content{margin-bottom:60px}
 .xogen_banner_content img{width:70%}
 @media (max-width:1680px){
@@ -317,7 +330,6 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .Xogen_Sub_heding_banner{font-size:26px}
 .xogen_banner_content{margin-bottom:25px}
 .xogen_banner_content img{width:70%}
-.Xogen_black_heding{font-size:28px}
 }
 @media (max-width:1600px){
 .xogen_banner_content{padding-top:50px;margin-bottom:25px}
@@ -329,20 +341,17 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 @media (max-width:1366px){
 .Xogen_heding_banner{font-size:45px}
 .Xogen_Sub_heding_banner{font-size:24px}
-.Xogen_black_heding{font-size:24px}
 }
 @media (max-width:1024px){
-.Xogen_heding_banner{font-size:30px}
+.Xogen_heding_banner{font-size:3px}
 .Xogen_Sub_heding_banner{font-size:16px}
+.xogen_banner_content{padding-right:50px}
 .xogen_banner_content img{width:60%}
-.Xogen_black_heding{margin-top:15px;font-size:18px}
 }
 @media (max-width:992px){
 .Xogen_Sub_heding_banner{font-size:21px}
 .Xogen_heding_banner{font-size:36px}
-.xogen-list-para{list-style:none;display:inline;padding-inline-start:0px}
-.xogen-list-para li{padding-bottom:20px}
-
+.xogen_banner_content{padding-right:10px}
 }
 @media (max-width:800px){
 .Xogen_Sub_heding_banner{font-size:21px}
@@ -353,12 +362,16 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .xogen_banner_content{padding-top:20px}
 .xogen-list-para{list-style:none;display:inline;padding-inline-start:0px}
 .xogen-list-para li{padding-bottom:20px}
+.Xogen_black_heding{display:none}
+}
+@media (max-width:600px){
+.Xogen_black_heding{display:block;margin-top:20px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
 }
 @media (max-width:411px){
 .Xogen_heding_banner{font-size:40px}
 .Xogen_Sub_heding_banner{font-size:21px}
 .xogen_banner_content img{width:65%}
-.Xogen_black_heding{font-size:21px}
+.Xogen_black_heding{font-size:28px}
 }
 @media (max-width:384px){
 .Xogen_heding_banner{font-size:38px}
@@ -366,7 +379,17 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 @media (max-width:375px){
 .Xogen_Sub_heding_banner{font-size:18px}
 }
-
+.banner_list_xogen{padding-top:22px;padding-inline-start:20px}
+.banner_list_xogen li{font-size:21px;font-weight:600;color:#464646}
+.xogen-ban-new-in-india{background-position:top left;background-repeat:no-repeat;background-image:url(../images/now-in-india-strip.webp);background-size:auto!important}
+@media (max-width:1024px){
+.banner_list_xogen li{font-size:18px;font-weight:600;color:#464646}
+}
+@media (max-width:600px){
+.xogen-ban-new-in-india{background-image:none}
+.banner_list_xogen{padding-top:5px}
+.banner_list_xogen li{font-size:21px;font-weight:600;color:#464646}
+}
 
 /*==========================================*/
 /* Our Process css*/
@@ -391,7 +414,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
 
-#process_slider{
+#process_slider {
   display: none;
 }
 
@@ -400,9 +423,6 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
 @media (max-width: 1024px) {
-
-
-
   .owl-item .item {
     transform: translate3d(0, 0, 0);
     padding: 30px 30px 20px;
@@ -422,6 +442,14 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
     margin: 0 10px;
     color: #000000 !important;
   }
+  .our_process_box{
+  height: 420px;
+  padding: 25px 20px;
+  text-align: center;
+  border-radius: 20px;
+  border: 1px solid #bdbdbd;
+}
+
 }
 
 @media (max-width: 992px) {
@@ -476,6 +504,14 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
    .blue-patch-bg{
 	background: none;
 }
+
+  .our_process_box{
+  height: 365px;
+  padding: 25px 20px;
+  text-align: center;
+  border-radius: 20px;
+  border: 1px solid #bdbdbd;
+}
 }
 
 @media (max-width: 800px){
@@ -507,4 +543,161 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
 @media (max-width: 360px){
+}
+
+/*==========================================*/
+/* Key points css*/
+/*==========================================*/
+
+.key_heading_css{
+	font-size: 21px;
+	font-weight: 500;
+	margin-bottom: 5px;
+	color: #212121;
+}
+
+
+#key_action_slider {
+  display: none;
+  text-align: left;
+}
+
+#key_action_slider .owl-item img{
+  display: inline !important;
+}
+
+@media (max-width: 1024px) {
+  .owl-item .item {
+    transform: translate3d(0, 0, 0);
+    padding: 30px 30px 20px;
+  }
+
+  #key_action_slider .owl-nav {
+    text-align: center !important;
+    margin-top: 15px;
+    top: 0;
+    right: 0;
+    position: relative;
+    display: block;
+  }
+
+  #key_action_slider .owl-nav button {
+    font-size: 30px !important;
+    margin: 0 10px;
+    color: #000000 !important;
+  }
+}
+
+@media (max-width: 992px) {
+  
+
+#key_action_slider{
+  display: block;
+}
+
+.key_action_slider_dekstop{
+  display: none;
+}
+
+}
+
+
+/*==========================================*/
+/* benifit css*/
+/*==========================================*/
+.benefits_section_bg_gredint{
+  background: linear-gradient(180deg, rgb(232 246 254) 65%, rgb(255 255 255) 65%);
+
+}
+
+.benifits_heading_css{
+	font-size: 21px;
+	font-weight: 500;
+	margin-bottom: 5px;
+	padding-top: 20px;
+/*	color: #212121;*/
+}
+
+.sub_para_benefits_sec{
+	font-size: 21px;
+	font-weight: 500;
+}
+
+.box_benefits_col{
+	padding: 25px;
+	box-shadow: 0 2px 8px rgb(194 194 194 / 30%);
+}
+
+
+.box_bene_col_non_activate{
+	background: #fff;
+}
+
+.box_bene_col_activate{
+  background: linear-gradient(359deg, #1e70b8 0, #33a9e1 100%);
+  color: #fff;
+}
+
+.box_bene_col_activate img{
+  filter: brightness(0) invert(1);
+}
+
+.box_benefits_col p{
+	margin-bottom: 0;
+}
+
+
+
+#benefits_Slider {
+  display: none;
+  text-align: left;
+}
+
+#benefits_Slider .owl-item img{
+  display: inline !important;
+}
+
+@media (max-width: 1024px) {
+  .owl-item .item {
+    transform: translate3d(0, 0, 0);
+    padding: 30px 30px 20px;
+  }
+
+  #benefits_Slider .owl-nav {
+    text-align: center !important;
+    margin-top: 15px;
+    top: 0;
+    right: 0;
+    position: relative;
+    display: block;
+  }
+
+  #benefits_Slider .owl-nav button {
+    font-size: 30px !important;
+    margin: 0 10px;
+    color: #000000 !important;
+  }
+}
+
+@media (max-width: 992px) {
+  
+
+#benefits_Slider{
+  display: block;
+}
+
+.benefits_Slider_dekstop{
+  display: none;
+}
+
+
+.sub_para_benefits_sec{
+	font-size: 16px;
+	font-weight: 500;
+}
+
+}
+
+.owl-dots{
+	display: none;
 }
