--- a/css/style-new.css
+++ b/css/style-new.css
@@ -318,8 +318,9 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 
 
 .xogen-para{padding-top:15px;font-size:16px;color:#212121}
-.xogen-list-para{list-style:none;display:flex;padding-inline-start:0px}
-.xogen-list-para li{padding-right:20px;color:#212121}
+.xogen-list-para{list-style:none;padding-inline-start:0px;}
+.xogen-list-para li{display: flex; padding-right:20px;color:#212121; padding-top: 20px}
+.xogen-list-para li img {width: 30px; height: 30px; margin-right: 10px;}
 .Xogen_heding_banner{color:#1c82c4;font-family:"Playfair Display",serif;font-weight:900;font-size:55px}
 .Xogen_Sub_heding_banner{font-size:29px;font-weight:400;margin-bottom:0}
 .Xogen_black_heding{display:none;margin-top:30px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
@@ -360,8 +361,8 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 @media (max-width:768px){
 .Xogen_Sub_heding_banner{font-size:21px}
 .xogen_banner_content{padding-top:20px}
-.xogen-list-para{list-style:none;display:inline;padding-inline-start:0px}
-.xogen-list-para li{padding-bottom:20px}
+.xogen-list-para{list-style: none; padding-inline-start:0px}
+.xogen-list-para li{padding-bottom:0px}
 .Xogen_black_heding{display:none}
 }
 @media (max-width:600px){
