--- a/css/style-new.css
+++ b/css/style-new.css
@@ -319,15 +319,15 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 
 .xogen-para{padding-top:15px;font-size:16px;color:#212121}
 .xogen-list-para{list-style:none;padding-inline-start:0px;}
-.xogen-list-para li{display: flex; padding-right:20px;color:#212121; padding-top: 20px}
+.xogen-list-para li{display: flex; padding-right:20px;color:#212121; padding-top: 17px}
 .xogen-list-para li img {width: 30px; height: 29px; margin-right: 10px;}
-.Xogen_heding_banner{color:#1c82c4;font-family:"Playfair Display",serif;font-weight:900;font-size:55px}
-.Xogen_Sub_heding_banner{font-size:29px;font-weight:400;margin-bottom:0}
+.Xogen_heding_banner{color:#1c82c4;font-family:"Playfair Display",serif;font-weight:900;font-size:45px;margin-top: 15px}
+.Xogen_Sub_heding_banner{font-size:40px;font-weight:400;margin-bottom:10px;}
 .Xogen_black_heding{display:none;margin-top:30px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
-.xogen_banner_content{margin-bottom:60px}
+/*.xogen_banner_content{margin-bottom:60px}*/
 .xogen_banner_content img{width:70%}
 @media (max-width:1680px){
-.Xogen_heding_banner{font-size:50px}
+.Xogen_heding_banner{font-size:37px}
 .Xogen_Sub_heding_banner{font-size:26px}
 .xogen_banner_content{margin-bottom:25px}
 .xogen_banner_content img{width:70%}
@@ -336,27 +336,27 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .xogen_banner_content{padding-top:50px;margin-bottom:25px}
 }
 @media (max-width:1440px){
-.Xogen_heding_banner{font-size:50px}
+.Xogen_heding_banner{font-size:35px}
 .Xogen_Sub_heding_banner{font-size:26px}
 }
 @media (max-width:1366px){
-.Xogen_heding_banner{font-size:45px}
+.Xogen_heding_banner{font-size:32px}
 .Xogen_Sub_heding_banner{font-size:24px}
 }
 @media (max-width:1024px){
-.Xogen_heding_banner{font-size:3px}
+.Xogen_heding_banner{font-size:25px}
 .Xogen_Sub_heding_banner{font-size:16px}
-.xogen_banner_content{padding-right:50px}
+/*.xogen_banner_content{padding-right:50px}*/
 .xogen_banner_content img{width:60%}
 }
 @media (max-width:992px){
 .Xogen_Sub_heding_banner{font-size:21px}
-.Xogen_heding_banner{font-size:36px}
+.Xogen_heding_banner{font-size:28px}
 .xogen_banner_content{padding-right:10px}
 }
 @media (max-width:800px){
 .Xogen_Sub_heding_banner{font-size:21px}
-.Xogen_heding_banner{font-size:36px}
+.Xogen_heding_banner{font-size:25px}
 }
 @media (max-width:768px){
 .Xogen_Sub_heding_banner{font-size:21px}
@@ -367,18 +367,23 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 @media (max-width:600px){
 .Xogen_black_heding{display:block;margin-top:20px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
+.Xogen_heding_banner{font-size:30px}
+
 }
 @media (max-width:411px){
-.Xogen_heding_banner{font-size:40px}
-.Xogen_Sub_heding_banner{font-size:21px}
-.xogen_banner_content img{width:65%}
+.Xogen_heding_banner{font-size:30px}
+.Xogen_Sub_heding_banner{font-size:25px}
+.xogen_banner_content img{width:45%}
 .Xogen_black_heding{font-size:28px}
 }
+@media (max-width:390px){
+.Xogen_heding_banner{font-size:28px}       
+}
 @media (max-width:384px){
-.Xogen_heding_banner{font-size:38px}
+.Xogen_heding_banner{font-size:26px}
 }
 @media (max-width:375px){
-.Xogen_Sub_heding_banner{font-size:18px}
+.Xogen_Sub_heding_banner{font-size:21px}
 }
 .banner_list_xogen{padding-top:22px;padding-inline-start:20px}
 .banner_list_xogen li{font-size:21px;font-weight:600;color:#464646}
@@ -547,160 +552,34 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
 /*==========================================*/
-/* Key points css*/
+/* Treatment Slider css*/
 /*==========================================*/
 
-.key_heading_css{
-	font-size: 21px;
-	font-weight: 500;
-	margin-bottom: 5px;
-	color: #212121;
+
+.flipsub-heading{font-weight:600;color:#30292b;font-size:16px;text-transform:uppercase;margin-bottom:5px}
+.flip-list{color:#636363;font-size:15px;padding-inline-start:19px}
+.box-for-treatment-sec{margin:12px;box-shadow:0 2px 8px rgb(194 194 194 / 30%)}
+.ai-box-content{padding:10px 20px;max-height:500px;height:500px}
+.tratment-sub-heading{padding-top:20px;font-size:20px;color:#212121;line-height:30px;font-weight:600}
+.tratment-slider-img-wid{width:100%!important}
+#tratment_slider .owl-item .item img{-webkit-transition:.3s;-o-transition:.3s;transition:.3s;-webkit-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:.4}
+#tratment_slider .owl-item.center .item img{-webkit-transform:scale(1.15);-ms-transform:scale(1.15);transform:scale(1.15);opacity:1}
+#tratment_slider .owl-nav{text-align:right;top:-60px;position:absolute;right:30px}
+#tratment_slider .owl-nav button{font-size:30px!important;margin:0 7px;color:#000!important}
+@media (max-width:1024px){
+.owl-item .item{transform:translate3d(0,0,0);padding:30px 30px 20px}
+#tratment_slider .owl-nav{text-align:center!important;margin-top:15px;top:0;right:0;position:relative}
+#tratment_slider .owl-nav button{font-size:30px!important;margin:0 10px;color:#000!important}
 }
-
-
-#key_action_slider {
-  display: none;
-  text-align: left;
-}
-
-#key_action_slider .owl-item img{
-  display: inline !important;
-}
-
-@media (max-width: 1024px) {
-  .owl-item .item {
-    transform: translate3d(0, 0, 0);
-    padding: 30px 30px 20px;
-  }
-
-  #key_action_slider .owl-nav {
-    text-align: center !important;
-    margin-top: 15px;
-    top: 0;
-    right: 0;
-    position: relative;
-    display: block;
-  }
-
-  #key_action_slider .owl-nav button {
-    font-size: 30px !important;
-    margin: 0 10px;
-    color: #000000 !important;
-  }
-}
-
-@media (max-width: 992px) {
-  
-
-#key_action_slider{
-  display: block;
-}
-
-.key_action_slider_dekstop{
-  display: none;
-}
-
-}
-
 
 /*==========================================*/
-/* benifit css*/
+/* Video css*/
 /*==========================================*/
-.benefits_section_bg_gredint{
-  background: linear-gradient(180deg, rgb(232 246 254) 65%, rgb(255 255 255) 65%);
-
+.video_section_design{
+/*  background-color: #e8f6fe;*/
 }
 
-.benifits_heading_css{
-	font-size: 21px;
-	font-weight: 500;
-	margin-bottom: 5px;
-	padding-top: 20px;
-/*	color: #212121;*/
-}
-
-.sub_para_benefits_sec{
-	font-size: 21px;
-	font-weight: 500;
-}
-
-.box_benefits_col{
-	padding: 25px;
-	box-shadow: 0 2px 8px rgb(194 194 194 / 30%);
-}
-
-
-.box_bene_col_non_activate{
-	height: 275px;
-	background: #fff;
-}
-
-.box_bene_col_activate{
-	height: 275px;
-  background: linear-gradient(359deg, #1e70b8 0, #33a9e1 100%);
-  color: #fff;
-}
-
-.box_bene_col_activate img{
-  filter: brightness(0) invert(1);
-}
-
-.box_benefits_col p{
-	margin-bottom: 0;
-}
-
-
-
-#benefits_Slider {
-  display: none;
-  text-align: left;
-}
-
-#benefits_Slider .owl-item img{
-  display: inline !important;
-}
-
-@media (max-width: 1024px) {
-  .owl-item .item {
-    transform: translate3d(0, 0, 0);
-    padding: 30px 30px 20px;
-  }
-
-  #benefits_Slider .owl-nav {
-    text-align: center !important;
-    margin-top: 15px;
-    top: 0;
-    right: 0;
-    position: relative;
-    display: block;
-  }
-
-  #benefits_Slider .owl-nav button {
-    font-size: 30px !important;
-    margin: 0 10px;
-    color: #000000 !important;
-  }
-}
-
-@media (max-width: 992px) {
-  
-
-#benefits_Slider{
-  display: block;
-}
-
-.benefits_Slider_dekstop{
-  display: none;
-}
-
-
-.sub_para_benefits_sec{
-	font-size: 16px;
-	font-weight: 500;
-}
-
-}
-
-.owl-dots{
-	display: none;
+.youtube-video {
+    width: 100%;
+    aspect-ratio: 14 / 14;
 }
