--- a/css/style-new.css
+++ b/css/style-new.css
@@ -584,3 +584,60 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
     width: 100%;
     aspect-ratio: 14 / 14;
 }
+
+/*==========================================*/
+/* Key points css*/
+/*==========================================*/
+
+.key_heading_css{
+        font-size: 21px;
+        font-weight: 500;
+        margin-bottom: 5px;
+        color: #212121;
+        line-height: normal;
+}
+
+
+#key_action_slider {
+  display: none;
+  text-align: left;
+}
+
+#key_action_slider .owl-item img{
+  display: inline !important;
+}
+
+@media (max-width: 1024px) {
+  .owl-item .item {
+    transform: translate3d(0, 0, 0);
+    padding: 30px 30px 20px;
+  }
+
+  #key_action_slider .owl-nav {
+    text-align: center !important;
+    margin-top: 15px;
+    top: 0;
+    right: 0;
+    position: relative;
+    display: block;
+  }
+
+  #key_action_slider .owl-nav button {
+    font-size: 30px !important;
+    margin: 0 10px;
+    color: #000000 !important;
+  }
+}
+
+@media (max-width: 992px) {
+  
+
+#key_action_slider{
+  display: block;
+}
+
+.key_action_slider_dekstop{
+  display: none;
+}
+
+}
