--- a/css/style-new.css
+++ b/css/style-new.css
@@ -368,15 +368,16 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 @media (max-width:600px){
 .Xogen_black_heding{display:block;margin-top:20px;font-size:38px;font-weight:600;color:#4b4b4b;text-transform:uppercase}
 .Xogen_heding_banner{font-size:30px}
+.Xogen_Sub_heding_banner{font-size:25px}
 
 }
 @media (max-width:411px){
-..xogen_banner_content{
+.xogen_banner_content{
 text-align: center;
 }
 .Xogen_heding_banner{font-size:28px}
 .Xogen_Sub_heding_banner{font-size:25px}
-.xogen_banner_content img{width:45%}
+.xogen_banner_content img{width:60%}
 .Xogen_black_heding{font-size:28px}
 }
 @media (max-width:390px){
@@ -596,7 +597,7 @@ text-align: center;
         font-size: 16px;
         margin-bottom: 5px;
         color: #212121;
-        line-height: normal;
+        line-height: 20px;
 }
 
 
