--- a/css/style-new.css
+++ b/css/style-new.css
@@ -597,6 +597,7 @@ text-align: center;
         font-size: 16px;
         color: #212121;
         line-height: 20px;
+        margin-bottom: 0;
 }
 
 
