--- a/css/style-new.css
+++ b/css/style-new.css
@@ -367,7 +367,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .Xogen_Sub_heding_banner{font-size:21px}
 .xogen_banner_content{padding-top:5px}
 .xogen-list-para{list-style: none; padding-inline-start:0px; margin-bottom: 0}
-.xogen-list-para li{padding-bottom:0px}
+.xogen-list-para li{padding-bottom:0px; padding-top: 10px;}
 .Xogen_black_heding{display:none}
 }
 @media (max-width:600px){
@@ -375,7 +375,8 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .Xogen_heding_banner{font-size:28px;margin-top: 5px;}
 .Xogen_Sub_heding_banner{font-size:21px;margin-bottom: 0}
 .xogen_banner_content img{width:50%}
-
+.xogen-list-para li{display: flex; padding-right:0px;color:#212121; padding-top: 17px}
+.xogen-list-para li img {width: 22px; height: 21px; margin-right: 10px; margin-top: 3px}
 }
 @media (max-width:411px){
 .Xogen_heding_banner{font-size:28px; margin-top: 5px}
