--- a/css/style-new.css
+++ b/css/style-new.css
@@ -5,6 +5,9 @@ body{font-family:Inter,sans-serif;font-size:16px;font-weight:400!important;color
 .font-500{font-weight:500!important}
 .form-control{border:1px solid #656565}
 .select2-container{z-index:9999}
+p{
+        margin-bottom:  0;
+}
 header{background:#0073ae;min-height:60px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
 @media (max-width:600px){
 header{background:#f2faff}
@@ -23,7 +26,7 @@ header{background:#f2faff}
 }
 .owl-carousel .owl-item img{width:auto}
 .owl-carousel .owl-dots{
-        display: none;
+/*        display: none;*/
 }
 .banner-section-cls{background:url(../images/xogen-ban-bg.webp) bottom center no-repeat;background-size:cover}
 .banner-up-para{font-size:40px;margin-bottom:0;font-weight:500}
@@ -109,13 +112,17 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .blue-strip-offer-section {
         text-align: right;
         color: #212121;
-        padding-bottom: 20px;
-        margin-top: -155px;
-        font-size: 14px;
+        padding-bottom: 0px;
+/*         margin-top: -155px; */
+        font-size: 12px;
         font-weight: 600;
+        position: relative;
+        bottom: 10px;
+/*        right: -3px;*/
+        ;/*
         writing-mode: vertical-rl;
         text-orientation: mixed;
-        transform: scale(1);
+        transform: scale(1);*/
     }
 }
 @media (max-width:430px){
@@ -209,8 +216,11 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 #googlerating_slider .owl-nav button{font-size:30px!important;margin:0 7px;color:#000!important}
 @media (max-width:1024px){
 .owl-item .item{transform:translate3d(0,0,0);padding:30px 30px 20px}
-#googlerating_slider .owl-nav{text-align:center!important;margin-top:15px;top:0;right:0;position:relative}
+#googlerating_slider .owl-nav{text-align:center!important;margin-top:0px;top:0;right:0;position:relative}
 #googlerating_slider .owl-nav button{font-size:30px!important;margin:0 10px;color:#000!important}
+#googlerating_slider .owl-dots{
+ display: none;
+}
 }
 .google-rating-box{height:260px;margin:15px 0;padding:20px 8px 0;background-color:#fff;box-shadow:0 2px 8px rgb(194 194 194 / 30%)}
 .google-rating-cls-para{padding-top:10px;font-size:16px;color:#636363}
@@ -420,9 +430,10 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .banner_list_xogen li{font-size:18px;font-weight:600;color:#464646}
 }
 @media (max-width:600px){
-.xogen-ban-new-in-india{background-image:none}
-.banner_list_xogen{padding-top:5px}
-.banner_list_xogen li{font-size:16px;font-weight:600;color:#464646}
+/*.xogen-ban-new-in-india{background-image:none}*/
+.xogen-ban-new-in-india{background-position:top left;background-repeat:no-repeat;background-image:url(../images/now-in-india-strip-mob.webp);background-size:auto!important}
+.banner_list_xogen{padding-top:10px}
+.banner_list_xogen li{font-size:16px;font-weight:600;color:#212121}
 }
 
 /*==========================================*/
@@ -468,7 +479,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
     top: 0;
     right: 0;
     position: relative;
-    display: block;
+    display: none;
   }
 
   #process_slider .owl-nav button {
@@ -483,6 +494,32 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
   border-radius: 20px;
   border: 1px solid #bdbdbd;
 }
+
+ #process_slider .owl-dots{
+  text-align: center;
+  padding-top: 8px;        
+ }      
+
+
+
+
+#process_slider .owl-dots button.owl-dot {
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  display: inline-block;
+  background: #ccc;
+  margin: 0 3px;
+}
+#process_slider  .owl-dots button.owl-dot.active {
+  background-color: #000;
+}
+#process_slider  .owl-dots button.owl-dot:focus {
+  outline: none;
+}
+
+
+
 
 }
 
@@ -540,7 +577,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
   .our_process_box{
-  height: 365px;
+  height: 340px;
   padding: 25px 20px;
   text-align: center;
   border-radius: 20px;
@@ -587,7 +624,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 .flipsub-heading{font-weight:600;color:#30292b;font-size:16px;text-transform:uppercase;margin-bottom:5px}
 .flip-list{color:#636363;font-size:15px;padding-inline-start:19px}
 .box-for-treatment-sec{margin:12px;box-shadow:0 2px 8px rgb(194 194 194 / 30%)}
-.ai-box-content{padding:10px 20px;max-height:500px;height:500px}
+.ai-box-content{padding:10px 20px;max-height:445px;height:445px}
 .tratment-sub-heading{padding-top:20px;font-size:20px;color:#212121;line-height:24px;font-weight:600}
 .tratment-slider-img-wid{width:100%!important}
 #tratment_slider .owl-item .item img{-webkit-transition:.3s;-o-transition:.3s;transition:.3s;-webkit-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:.4}
@@ -654,8 +691,8 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 }
 
 .key_icon_box img{
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
 }
 
 .key_icon_box p{
@@ -666,7 +703,7 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 
 
 .key_icon_box p span{
-        margin: auto 15px;
+        margin: auto 5px auto 12px;
         color: #212121;
 }
 
@@ -710,8 +747,8 @@ hr.bannerhr{width:80px;border:2px solid #0074ad}
 @media (max-width: 992px) {
 
 .key_icon_box img{
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
 }
 
 }
